CIRC-1889 unit tests, page slips sort order